<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_wifi"
            android:title="@string/menu_wifi" />
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/menu_bluetooth" />
        <item
            android:id="@+id/nav_sar"
            android:icon="@drawable/ic_sar"
            android:title="@string/menu_sar" />
        <item
            android:id="@+id/nav_noise"
            android:icon="@drawable/ic_trends"
            android:title="@string/menu_noise" />
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_trends"
            android:title="@string/menu_trends" />
        <item
            android:id="@+id/nav_emf"
            android:icon="@drawable/ic_trends"
            android:title="@string/menu_emf" />
        <item
            android:id="@+id/nav_ambient_rf"
            android:icon="@drawable/ic_trends"
            android:title="@string/menu_ambient_rf" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
